Fixed the project columns for the most part, minor visual error on tablets

--- a/_sass/utilities.scss
+++ b/_sass/utilities.scss
@@ -14,10 +14,6 @@
     }
 }
 
-.is-centered {
-    margin: 0 auto;
-}
-
 .has-no-shadow {
     text-shadow: none;
 }
